--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ImageLoad"></activity>
+        <activity android:name=".ImageLoad" />
         <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
@@ -31,8 +31,8 @@
         <activity android:name=".SignUpActivity" />
         <activity
             android:name="com.yanzhenjie.album.AlbumActivity"
-            android:label="图库"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="图库"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:windowSoftInputMode="stateAlwaysHidden|stateHidden" />
     </application>
