--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".DetailedActivity"></activity>
         <activity android:name=".ImageLoad" />
         <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity">
